--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.1",
     "express-ws": "^5.0.2",
     "nodemon": "^2.0.16"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
